Fork and refactor gRPC unary GET benchmark. Add advanced warmup, measurement phases, isolation mechanisms, and enhanced validation.